--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "license": "MIT",
     "dependencies": {
         "luxon": "^3.4.4",
+        "stack-trace": "^1.0.0-pre2",
         "stacktracey": "^2.1.8"
     }
 }
